# soiled-py

./: .gitignore  README.md  docker-compose-soiled.yml  docker-compose-traefik.yml  docker-compose-works.yml  dockerfile  pyproject.toml  ruff.toml  service_start.sh  tailwind.config.js  task_worker.py  test_script.py  test_script2.py  test_script3.py
_local_swarm_secrets/: django_secret_key
_local_traefik_config/: traefik.toml
dashboard_template/: index.html
mock_sensors/: sensors.py
old/: requirements.txt_bak
src/: app_secrets.py  main.py
src/_core/: admin.py  api.py  asgi.py  onepass.py  settings.py  tests.py  urls.py  wsgi.py
src/_core/assets/css/: tailwind.output.css
src/_core/templates/: base copy 2.html  base copy 3.html  base copy.html  base.html  collapsed_sidebar.html  daisyui_navbar.html  dark_mode_toggle.html  form_errors_here.html  form_errors_toast.html  header.html  messages.html  navbar.html  toast_top.html
src/_core/templates/registration/: login.html  login.html_bak
src/_shared/: env_file.py  masked.py  onepass.py  pretty_cli.py
src/app_soiled/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
src/app_soiled/api/: __init__.py  location.py  measurement.py  plant.py  sensor.py
src/app_soiled/migrations/: 0001_initial.py  0002_rename_moisure_percent_measurement_moisture_percent.py  0003_alter_sensor_name.py  0004_alter_measurement_options_alter_sensor_mac_address.py
src/app_soiled/templates/app_soiled/: hx_plants.html  hx_plants_table.html  temp.html
src/app_traps/: admin.py  apps.py  urls.py  views.py
src/app_traps/logic/victor_mouse_trap/: __init__.py  _api.py  _client.py  plain.py
src/app_traps/templates/app_traps/: hx_traps_widgets.html
src/backend_feature_flags/: admin.py  apps.py  models.py
src/backend_feature_flags/migrations/: 0001_initial.py  0002_feature_enable_at_feature_remove_old_func_and_more.py  0003_alter_feature_enable_at.py  0004_alter_feature_options_remove_feature_enable_at_and_more.py  0005_alter_feature_name.py  0006_rename_desciption_feature_description.py
src/models/: soil.py
src/override/: apps.py
src/routes/: __init__.py  location.py  plant.py  soil.py
src_fastapi/: auth.py  main.py
src_fastapi/models/: user.py
src_fastapi/routes/: device.py  general.py  status.py  user.py
