[project]
name = "src"
version = "2024.7.9"
authors = [
  {name="darrida", email="darrida.py@gmail.com"}
]
description = "CLI utility to help deploy py-shinylive apps to hosted webservers via SSH."
readme = "README.md"
requires-python = ">= 3.12"

dependencies = [
    'loguru',
    'logfire[django,asgi] > 2.0',
    'pydantic > 2.0',
    'uvicorn',
    "django>=5.1.2",
    "django-ninja>=1.3.0",
    "social-auth-app-django>=5.4.2",
    "django-htmx>=1.21.0",
    "diskcache>=5.6.3",
    "prefect>=3.1.0",
    "channels[daphne]>=4.1.0",
    "daphne>=4.1.2",
    "django-q2>=1.7.4",
    "django-tasks>=0.5.0",
    "django-unfold>=0.41.0",
    "onepassword-sdk>=0.1.5",
]

[project.optional-dependencies]
tests = [
  'pytest',
  'loguru',
  'httpx',
  'pytest',
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.logfire]
pydantic_plugin_record = "all"

[tool.ruff]
line-length = 120
extend-exclude = [".venv", "*.robot"]

[tool.ruff.lint]
extend-select = ["S", "I"]  # bandit (S), isort (I)

[tool.ruff.lint.isort]
extra-standard-library = []
known-first-party = []
known-third-party = []
